--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rasa-webchat",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Chat web widget for React apps and Rasa Core chatbots",
   "module": "module/index.js",
   "main": "lib/index.js",
@@ -9,7 +9,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js -p",
+    "build": "webpack --config webpack.prod.js",
     "test": "jest",
     "prepare": "npm run build",
     "release": "standard-version"
@@ -23,7 +23,7 @@
   "dependencies": {
     "@popperjs/core": "^2.4.0",
     "@stomp/stompjs": "^5.4.2",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.5.2",
     "immutable": "^3.8.2",
     "object-hash": "^1.1.5",
     "prop-types": "^15.7.2",
@@ -32,7 +32,7 @@
     "react-popper": "^2.2.3",
     "react-redux": "^7.1.3",
     "react-slick": "^0.26.1",
-    "react-textarea-autosize": "^7.1.2",
+    "react-textarea-autosize": "^8.3.4",
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
     "socket.io": "^3.1.2",
@@ -54,28 +54,18 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
+    "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-prettier": "^1.6.0",
-    "eslint-import-resolver-babel-module": "^5.1.2",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-react": "^6.10.3",
     "husky": "^3.0.7",
     "jest": "^25.5.4",
     "lodash-webpack-plugin": "^0.11.5",
-    "node-sass": "^4.12.0",
+    "node-sass": "^6.0.1",
     "prettier": "^1.18.2",
     "prettier-eslint": "^5.1.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "redux-mock-store": "^1.5.4",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^10.3.0",
     "standard-version": "^9.0.0",
     "string-replace-loader": "^2.3.0",
     "style-loader": "^0.18.2",
@@ -85,8 +75,8 @@
     "webpack-dev-server": "^3.8.0"
   },
   "peerDependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "jest": {
     "verbose": true,
